# SDL-Playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  TODO.txt  build.cmd  build.sh  vcpkg.json
shaders/: CMakeLists.txt  main.vert
src/: CMakeLists.txt  app.cpp  app.h  controller.h  game.cpp  game.h  game.hpp  keyboard.h  main.cpp  util.cpp  util.h
src/app/: CMakeLists.txt  app.cpp  app.h  app.hpp  camera.cpp  camera.hpp  errors.h  errors.hpp  mesh.cpp  mesh.hpp  object.cpp  object.h  object.hpp  scene.h  scene.hpp  scene_manager.cpp  scene_manager.h  scene_manager.hpp  vulkan.cpp  vulkan.h
src/app/vulkan/: CMakeLists.txt  camera.cpp  camera.hpp  devices.cpp  devices.h  devices.hpp  helper.cpp  helper.h  helper.hpp  mesh.cpp  mesh.hpp  object.cpp  object.h  object.hpp  pipeline.cpp  pipeline.h  pipeline.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  surface.cpp  surface.h  surface.hpp  vulkan.cpp  vulkan.h  vulkan.hpp
src/util/: CMakeLists.txt  events.h  events.hpp  logger.cpp  logger.h  macros.h  macros.hpp  vec_math.cpp  vec_math.h
src/util/controls/: controller.cpp  controller.h  controller.hpp  keyboard.cpp  keyboard.h  keyboard.hpp
